Fix phone display on Safari

--- a/side-projects/vcstickerpack/assets/style/style.css
+++ b/side-projects/vcstickerpack/assets/style/style.css
@@ -104,7 +104,7 @@ img {
 }
 
 video {
-  width: 250px;
+  width: 15em;
   border: 0.7em solid #000;
   background-color: #000;
   border-radius: 1.75em;
